Fix Safari compatibility for h3 bottom alignment
Use flex-direction: column with justify-content: flex-end instead of
align-items: flex-end, which Safari doesn't handle well on absolutely
positioned elements with implicit height.

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1379,7 +1379,8 @@ body.horizontal-nav main {
         padding: 0;
         z-index: 5;
         display: flex;
-        align-items: flex-end;
+        flex-direction: column;
+        justify-content: flex-end;
       }
       p {
         text-align: right;
